cmake_minimum_required(VERSION 3.8)
project(Module6)

set(CMAKE_CXX_STANDARD 11)

#set(SOURCE_FILES Array.cpp)
#set(SOURCE_FILES FuncArray.cpp)
#set(SOURCE_FILES MultiDArray.cpp)
#set(SOURCE_FILES StructArray.cpp)
#set(SOURCE_FILES arrayAsClassMem.cpp)
#set(SOURCE_FILES arrayChar.cpp)
#set(SOURCE_FILES copyString.cpp)
#set(SOURCE_FILES string1.cpp)
set(SOURCE_FILES inputOutputString.cpp)
add_executable(Module6 ${SOURCE_FILES})